@@ -4,7 +4,6 @@ Goals for next minor release (0.8.9):
 * Handle sys.exit() as non-returnable condition
 * Warn about non-escaping backslashes???
 * Add warning about redefining a function/method with different signatures
-* Add warning about iterating over a string
 
 Goals for next major release (0.9):
 -----------------------------------
@@ -44,5 +43,6 @@ Longer Term goals:
 * Add check for implicit string concatentation
 * Add check for creating tuple when don't want a tuple, like: 1,
             or not creating tuple when want one, like: (1)
+* Warn when using () with statements (assert, print, del, if, while)
 * Find lines that end w/semi-colons (;)
 
